@@ -21,6 +21,7 @@ namespace Astroid {
 
       bool save_sent;
       ustring save_sent_to;
+      vector<ustring> additional_sent_tags;
       ustring save_drafts_to;
 
       ustring full_address ();
